[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
overflow-checks = false
debug = 0
debug-assertions = false
lto = true
split-debuginfo = '...'  # Platform-specific.
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false


[dependencies]
rand = "*"
rayon = "*"
